[gd_scene load_steps=15 format=3 uid="uid://h3i5gc0ryenh"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_8bgxb"]
[ext_resource type="Texture2D" uid="uid://da2ohsntu2lc6" path="res://assets/player/idle.png" id="2_nw4x5"]
[ext_resource type="Texture2D" uid="uid://ds24jidhoytug" path="res://assets/player/chonky-left.png" id="2_o1g6u"]
[ext_resource type="Texture2D" uid="uid://d0ok5hvk07s6w" path="res://assets/sky.jpg" id="2_ru0tq"]
[ext_resource type="Texture2D" uid="uid://5jbxda6i1gr1" path="res://assets/player/chonky-right.png" id="3_5dnfu"]

[sub_resource type="Animation" id="Animation_kac42"]
resource_name = "move_left"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ChonkyLeft:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
}

[sub_resource type="Animation" id="Animation_c4pcb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ChonkyLeft:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_af7wl"]
_data = {
"RESET": SubResource("Animation_c4pcb"),
"move_left": SubResource("Animation_kac42")
}

[sub_resource type="Animation" id="Animation_8cai6"]
resource_name = "move_right"
length = 1.21
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
}

[sub_resource type="Animation" id="Animation_2srs7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r81gu"]
_data = {
"RESET": SubResource("Animation_2srs7"),
"move_right": SubResource("Animation_8cai6")
}

[sub_resource type="Animation" id="Animation_xft17"]
resource_name = "idle"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jyr6h"]
_data = {
"idle": SubResource("Animation_xft17")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p1rha"]
size = Vector2(36, 124)

[node name="Player" type="CharacterBody2D"]
scale = Vector2(1.64, 1.64)
script = ExtResource("1_8bgxb")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(0.304919, -188.415)
scale = Vector2(0.238186, 0.211851)
texture = ExtResource("2_ru0tq")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = -573.0
offset_top = -513.0
offset_right = 575.0
offset_bottom = -473.0
text = "Deaths: 0"

[node name="ChonkyLeft" type="Sprite2D" parent="."]
position = Vector2(1, -63)
scale = Vector2(1.998, 4.263)
texture = ExtResource("2_o1g6u")
hframes = 13

[node name="AnimationPlayer" type="AnimationPlayer" parent="ChonkyLeft"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_af7wl")
}

[node name="ChonkyRight" type="Sprite2D" parent="."]
visible = false
position = Vector2(1, -63)
scale = Vector2(1.998, 4.263)
texture = ExtResource("3_5dnfu")
hframes = 14

[node name="AnimationPlayer" type="AnimationPlayer" parent="ChonkyRight"]
libraries = {
"": SubResource("AnimationLibrary_r81gu")
}

[node name="IdleChonky" type="Sprite2D" parent="."]
visible = false
position = Vector2(0.999996, -63)
scale = Vector2(1.99829, 4.26302)
texture = ExtResource("2_nw4x5")
hframes = 3
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="IdleChonky"]
libraries = {
"": SubResource("AnimationLibrary_jyr6h")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -61)
shape = SubResource("RectangleShape2D_p1rha")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -189)
